TweetFetcher: OpenJPA
Added Java Persistance API and database handler. New functions and classes
to treat rows in database as objects. Enhancement script also added, read
documentation.